# N-Body-CUDA

./: .gitignore  README.md
N-Body/: _CMakeLists.txt  initial_states.txt  main.cu  nBodyUtils.cuh  solar_system.txt  sun_and_earth.txt
N-Body-Visualization/: initial_conditions.txt  ring_generator.py  trajectories_generator.py  utils.py  visualization_canvas.py
N-Body-Visualization/scenarios/: 3_body.txt  catapult.txt  chaos.txt  ring.txt  simple_orbit.txt  solar_system.txt
N-Body/N-Body-CUDA/: CMakeLists.txt
N-Body/N-Body-CUDA/include/: cuda_utils.cuh  kernel.cuh  nbody_utils.cuh
N-Body/N-Body-CUDA/src/: kernel.cu  nbody_cuda_benchmark.cu  nbody_cuda_sim.cu  nbody_utils.cu
N-Body/_old/: app.py  generate_random_data.py  main.cu
N-Body/_old/nbody/frontends/: __init__.py
N-Body/_old/nbody/frontends/headless/: __init__.py  headless_frontend.py
N-Body/_old/nbody/frontends/matplotlib/: matplotlib_frontend.py
src/: app.py  nbody_constant.json
src/nbody/backends/: backend.py
src/nbody/backends/cpu/: __init__.py  cpu_backend.py
src/nbody/frontends/: frontend.py
src/nbody/frontends/matplotlib/: __init__.py
src/nbody/helpers/: __init__.py  body.py
src/python-model/: n_body.py
